--- a/.github/workflows/cdk-cfn-guard.yml
+++ b/.github/workflows/cdk-cfn-guard.yml
@@ -32,7 +32,7 @@ jobs:
     - name: CloudFormation Guard
       uses: aws-cloudformation/cloudformation-guard@main
       with:
-        rules: ./rules.guard
+        rules: ./cis-top-20.guard
         checkout: false
         debug: true
         data: ./cdk.out/template.yaml
