--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -45,4 +45,4 @@ jobs:
           role-session-name: cdk-deploy
           aws-region: "us-west-2"
       - name: Deploy to AWS
-        run: cdk deploy
+        run: cdk deploy --require-approval never
